2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::chroot::chroot_ptr to sbuild::chroot::ptr,
	sbuild::chroot::SetupType to sbuild::chroot::setup_type, and
	sbuild::chroot::SessionFlags to sbuild::chroot::session_flags.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename schroot::Options to schroot::options.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::Session to sbuild::session.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::AuthConvTty to sbuild::auth_conv_tty.

	* Rename sbuild::AuthConv to sbuild::auth_conv.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::AuthMessage to sbuild::auth_message.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::Auth to sbuild::auth.

2006-02-05  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::Lock to sbuild::lock, sbuild::FileLock to
	sbuild::file_lock, and sbuild::DeviceLock to sbuild::device_lock.

2006-02-05  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild-config.(cc|h) to sbuild-chroot-config.(cc|h).

	* Rename sbuild::Config to sbuild::chroot_config.

2006-02-05  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::ChrootLvmSnapshot to sbuild::chroot_lvm_snapshot.

	* Rename sbuild::ChrootBlockDevice to sbuild::chroot_block_device.

	* Rename sbuild::ChrootFile to sbuild::chroot_file.

	* Rename sbuild::ChrootPlain to sbuild::chroot_plain.

2006-02-05  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::Chroot to sbuild::chroot.

	* test/config.ex2/sarge
	(run-session-scripts): Remove duplicate line.

2006-02-05  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-auth-conv.h: Add an error exception typedef.

	* schroot/sbuild-auth-conv-tty.cc
	(get_delay): Throw an exception on fatal timeout.  Log a warning
	rather than using std::cerr.
	(read_string): Return a string rather than a pointer to an
	allocated string.  Throw an exception on failure.
	(read_string): Don't print a newline after the prompt message.